2024-07-26  Andreas Scherer  <https://ascherer.github.io>

	* pdftex.ch: Prepare for compilation with gcc-14.

2024-05-24  Thanh Han The  <hanthethanh@gmail.com>

	* pdftex.web (pdf_ptex_use_underscore_code),
	(pdf_ptex_use_underscore): new \pdfptexuseunderscore parameter.
	(Put each ...): define it.
	(print_param): print it.
	(get_ptex_use_underscore): new fn to implement it.
	(pdf_print_info): adjust Fullbanner prefix character.
	* pdftoepdf.cc (getptexuseunderscore): declare fn.
	(write_epdf): use it for FileName, PageNumber, InfoDict.

2024-04-18  Thanh Han The  <hanthethanh@gmail.com>

	* pdftex.web (pdf_begin_string): increase tolerance for finding
	interword spaces by 1pt, since overfull lines can have smaller
	spaces than space-space_shrink. Report from Ulrike,
	https://tug.org/pipermail/pdftex/2024-April/009388.html

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-04  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]26 for TL24.

2024-01-14  Thanh Han The  <hanthethanh@gmail.com>

	* pdftoepdf.cc (write_epdf): call writeRefs at the end, to write
	all indirect objects after writing everything else.
	From pdftex r916 (and test in r915). Original report:
	https://bugs.ghostscript.com/show_bug.cgi?id=706940

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add tests for --recorder and *.fls.

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add test for file names with over-BMP
	(4byte UTF-8).
	https://tug.org/pipermail/tex-live/2023-November/049685.html

2023-10-27  Thanh Han The  <hanthethanh@gmail.com>

	* tounicode.c (deftounicode): sscanf %lX into unsigned long to
	avoid failure in text extraction on BigEndian systems. Report
	from hille42,