@@ -1,3 +1,7 @@
+2024-08-04  Thanh Han The  <hanthethanh@gmail.com>
+
+	* pdftoepdf.cc (write_epdf): reversed sep and pdfkeyprefix.
+
 2024-07-26  Andreas Scherer  <https://ascherer.github.io>
 
 	* pdftex.ch: Prepare for compilation with gcc-14.
